--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,9 @@ before_script:
   - virtualenv venv
   - source venv/bin/activate
 
-#test:
-#  script:
-#    - pip install ruff tox  # you can also use tox
-#    - pip install --editable ".[test]"
-#    - tox -e py,ruff
+test:
+  script:
+    - pytest -v --cov
 
 run:
   script:
