--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,11 @@ before_script:
   - virtualenv venv
   - source venv/bin/activate
   - pip install -r requirements.txt
+  - python setup.py install
 
 test:
   script:
-    #- pytest -v --cov
-    - python setup.py test
+    - pytest -v --cov
 
 #run:
 #  script:
