--- a/requirements.txt
+++ b/requirements.txt
@@ -5,28 +5,27 @@ cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
 coverage==7.3.2
+exceptiongroup==1.2.0
 flake8==6.1.0
 flatbuffers==23.5.26
-gast==0.4.0
+gast==0.3.3
 google-auth==2.23.4
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.59.2
-h5py==3.10.0
 idna==3.4
+importlib-metadata==7.0.0
 iniconfig==2.0.0
-keras==2.14.0
 libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 mccabe==0.7.0
-ml-dtypes==0.2.0
-numpy==1.24.4
+numpy==1.18.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
 pluggy==1.3.0
-protobuf==4.25.0
+protobuf==3.20.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
@@ -36,15 +35,17 @@ pytest-cov==4.1.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scipy==1.4.1
 six==1.16.0
-tensorboard==2.14.1
+tensorboard==2.14.0
 tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
 termcolor==2.3.0
+tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==2.0.7
 Werkzeug==3.0.1
 wrapt==1.14.1
 z3-solver==4.12.2.0
+zipp==3.17.0
