--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 mccabe==0.7.0
-numpy==1.18.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
@@ -35,12 +34,7 @@ pytest-cov==4.1.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-scipy==1.4.1
 six==1.16.0
-tensorboard==2.14.0
-tensorboard-data-server==0.7.2
-tensorflow==2.3.0
-tensorflow-estimator==2.3.0
 termcolor==2.3.0
 tomli==2.0.1
 typing_extensions==4.5.0
@@ -49,3 +43,5 @@ Werkzeug==3.0.1
 wrapt==1.14.1
 z3-solver==4.12.2.0
 zipp==3.17.0
+numpy~=1.24.3
+tensorflow~=2.13.0
