--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -6,8 +6,8 @@ on:
       - feature/*
       - develop
 
-permissions:
-  contents: write
+#permissions:
+#  contents: write
 
 jobs:
   build-and-deploy:
@@ -31,4 +31,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'docs: update code documentation'
           # cname: your-custom-domain.com  # Optional: Add your custom domain here if needed
