--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme
+          python setup.py
       - name: Build documentation
         run: |
           sphinx-apidoc -o docs src/
