--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,8 +21,8 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install sphinx sphinx_rtd_theme
-          python setup.py
       - name: Build documentation
         run: |
           sphinx-apidoc -o docs src/
