--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setup.py
+          python setup.py install
           pip install sphinx sphinx_rtd_theme
       - name: Build documentation
         run: |
