--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python setup.py install
+          pip install -r requirements.txt
           pip install sphinx sphinx_rtd_theme
       - name: Build documentation
         run: |
