--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ wheel~=0.42.0
 Pillow~=10.1.0
 docutils~=0.20.1
 sphinx~=7.2.6
-Jinja2~=3.1.2
+Jinja2~=3.1.3
 setuptools~=69.0.2
 pyparsing~=3.1.1
+PyYAML==6.0.1
