--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 absl-py==2.0.0
-alabaster==0.7.16
 astunparse==1.6.3
-Babel==2.14.0
 boto==2.49.0
 cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
 coverage==7.3.2
-docutils==0.20.1
 exceptiongroup==1.2.0
 flake8==6.1.0
 flatbuffers==23.5.26
@@ -16,51 +13,28 @@ google-auth==2.23.4
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.59.2
-h5py==3.11.0
 idna==3.4
-imagesize==1.4.1
 importlib-metadata==7.0.0
 iniconfig==2.0.0
-Jinja2==3.1.3
-keras==2.13.1
 libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 mccabe==0.7.0
-numpy==1.24.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
-pika==1.3.2
-Pillow==10.1.0
 pluggy==1.3.0
 protobuf==3.20.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
-Pygments==2.18.0
-pyparsing==3.1.2
 pytest==7.4.3
 pytest-cov==4.1.0
-PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
-snowballstemmer==2.2.0
-Sphinx==7.2.6
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
-sphinxcontrib-htmlhelp==2.0.5
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.7
-sphinxcontrib-serializinghtml==1.1.10
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.3.0
 tomli==2.0.1
 typing_extensions==4.5.0
@@ -69,3 +43,5 @@ Werkzeug==3.0.1
 wrapt==1.14.1
 z3-solver==4.12.2.0
 zipp==3.17.0
+numpy~=1.24.3
+tensorflow~=2.13.0
