--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+          python-version: "3.11" 
       - name: Build package
         run: |
-          python -m build
+          python3 setup.py build
       - name: Publish package
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
