--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -4,7 +4,7 @@ name: Predator Prey Service Deploy Image
 on:
   push:
     branches:
-      - release/*
+      - main
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
